--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,11 +1,8 @@
-# $Id: mklivecd.spec.in,v 1.12 2003/10/04 10:03:28 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.13 2003/10/06 14:55:53 jaco Exp $
 
 %define name		mklivecd
 %define version		@MKLIVECDVER@
 %define release		@MKLIVECDREL@mdk
-%if %(echo %release|grep -q cvs; echo $[1-$?])
-%global	cvs		%(echo @MKLIVECDREL@mdk| tr -d [a-z]|cut -d. -f3)
-%endif
 
 %define summary		Builds a LiveCD from an existing Mandrake Linux installation
 
@@ -16,7 +13,7 @@ Release:		%{release}
 License:		GPL
 Group:			System/Configuration/Boot and Init
 URL:			http://www.linuxminicd.org/mklivecd/
-Source0:		%{name}-%{version}%{?cvs:-cvs.%{cvs}}.tar.bz2
+Source0:		%{name}-@ARCHIVEVER@.tar.bz2
 Requires:		busybox, cloop-utils, mkisofs
 BuildRoot:		%{_tmppath}/%{name}-root
 Buildarch:		noarch
@@ -25,7 +22,7 @@ Buildarch:		noarch
 %{summary}
 
 %prep
-%setup -q %{?cvs:-n %{name}-%{version}-cvs.%{cvs}}
+%setup -q %{name}-@ARCHIVEVER@
 
 %build
 %make
