--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.41 2003/10/06 14:50:35 jaco Exp $
+# $Id: mklivecd.in,v 1.42 2003/10/07 06:28:07 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
@@ -38,7 +38,8 @@ modulefile=/etc/modules.conf
 tmpdir=""
 rc=0
 kernel26=""
-modules="cdrom ide-cd ext3 isofs jbd nls_iso8859-13 nls_iso8859-14 nls_iso8859-15 nls_iso8859-1 nls_iso8859-2 nls_iso8859-3 nls_iso8859-4 nls_iso8859-5 nls_iso8859-6 nls_iso8859-7 nls_iso8859-8 nls_iso8859-9 nls_utf8"
+modules="@DEF_MODULES@ @DEF_MODULES_DEP@ @DEF_SCSI_MODULES@ @DEF_SCSI_MODULES_DEP@"
+
 excludedirs="^/[.].* ^/dev$ ^/initrd$ ^/lost+found$ ^/mnt$ ^/proc$ ^/tmp$ ^/var/lock/subsys$ ^/var/run$ ^/var/tmp$"
 excludefiles="^/[.].* ^/fastboot$ /core[.][0-9][0-9]*$ .*[.]rpmnew$ .*[.]rpmsave$ /[.]bash_history$ /[.]fonts[.]cache-[0-9]$ /[.]xauth.* /[.]xsession-errors$"
 cloopimg=""
