--- a/mklivecd/Makefile
+++ b/mklivecd/Makefile
@@ -1,6 +1,7 @@
-# $Id: Makefile,v 1.23 2003/10/09 11:24:00 jaco Exp $
+# $Id: Makefile,v 1.24 2003/10/10 04:52:17 jaco Exp $
 
 include Rules.mk
+include Modules.mk
 
 all: mklivecd
 
@@ -10,29 +11,29 @@ version:
 mklivecd:
 	$(MKDIR) -p $(DISTDIR)
 	$(CAT) $(SRCDIR)/hwdetect.in | \
-		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g' | \
-		$(SED) -e 's/@DEF_KEYBOARD@/$(DEF_KEYBOARD)/g' \
+		$(SED) -e 's,@MKLIVECDVER@,$(ARCHIVEVER),g' | \
+		$(SED) -e 's,@DEF_KEYBOARD@,$(DEF_KEYBOARD),g' \
 			>$(DISTDIR)/hwdetect
 	$(CAT) $(SRCDIR)/linuxrc.in | \
-		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g' | \
-		$(SED) -e 's/@KERNELVER@/$(KERNELVER)/g' | \
-		$(SED) -e 's/@DEF_MODULES@/$(DEF_MODULES)/g' | \
-		$(SED) -e 's/@DEF_MODULES_OPT@/$(DEF_MODULES_OPT)/g' | \
-		$(SED) -e 's/@DEF_MODULES_DEP@/$(DEF_MODULES_DEP)/g' | \
-		$(SED) -e 's/@DEF_SCSI_MODULES@/$(DEF_SCSI_MODULES)/g' | \
-		$(SED) -e 's/@DEF_SCSI_MODULES_DEP@/$(DEF_SCSI_MODULES_DEP)/g' \
+		$(SED) -e 's,@MKLIVECDVER@,$(ARCHIVEVER),g' | \
+		$(SED) -e 's,@KERNELVER@,$(KERNELVER),g' | \
+		$(SED) -e 's,@DEF_MODULES@,$(DEF_MODULES),g' | \
+		$(SED) -e 's,@DEF_MODULES_OPT@,$(DEF_MODULES_OPT),g' | \
+		$(SED) -e 's,@DEF_MODULES_DEP@,$(DEF_MODULES_DEP),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES@,$(DEF_SCSI_MODULES),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_DEP@,$(DEF_SCSI_MODULES_DEP),g' \
 			>$(DISTDIR)/linuxrc
 	$(CAT) $(SRCDIR)/$(PKGNAME).in | \
-		$(SED) -e 's/@PKGNAME@/$(PKGNAME)/g' | \
-		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g' | \
-		$(SED) -e 's/@DEF_KEYBOARD@/$(DEF_KEYBOARD)/g' | \
-		$(SED) -e 's/@DEF_RESOLUTION@/$(DEF_RESOLUTION)/g' | \
-		$(SED) -e 's/@DEF_VGAMODE@/$(DEF_VGAMODE)/g' | \
-		$(SED) -e 's/@DEF_MODULES@/$(DEF_MODULES)/g' | \
-		$(SED) -e 's/@DEF_MODULES_OPT@/$(DEF_MODULES_OPT)/g' | \
-		$(SED) -e 's/@DEF_MODULES_DEP@/$(DEF_MODULES_DEP)/g' | \
-		$(SED) -e 's/@DEF_SCSI_MODULES@/$(DEF_SCSI_MODULES)/g' | \
-		$(SED) -e 's/@DEF_SCSI_MODULES_DEP@/$(DEF_SCSI_MODULES_DEP)/g' \
+		$(SED) -e 's,@PKGNAME@,$(PKGNAME),g' | \
+		$(SED) -e 's,@MKLIVECDVER@,$(ARCHIVEVER),g' | \
+		$(SED) -e 's,@DEF_KEYBOARD@,$(DEF_KEYBOARD),g' | \
+		$(SED) -e 's,@DEF_RESOLUTION@,$(DEF_RESOLUTION),g' | \
+		$(SED) -e 's,@DEF_VGAMODE@,$(DEF_VGAMODE),g' | \
+		$(SED) -e 's,@DEF_MODULES_PATH@,$(DEF_MODULES_PATH),g' | \
+		$(SED) -e 's,@DEF_MODULES_OPT_PATH@,$(DEF_MODULES_OPT_PATH),g' | \
+		$(SED) -e 's,@DEF_MODULES_DEP_PATH@,$(DEF_MODULES_DEP_PATH),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_PATH@,$(DEF_SCSI_MODULES_PATH),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_PATH@,$(DEF_SCSI_MODULES_DEP_PATH),g' \
 			>$(DISTDIR)/$(PKGNAME)
 
 install:
@@ -45,10 +46,10 @@ install:
 spec:
 	$(MKDIR) -p $(DISTDIR)
 	$(CAT) $(PKGNAME).spec.in | \
-		$(SED) -e 's/@MKLIVECDVER@/$(MKLIVECDVER)/g' | \
-		$(SED) -e 's/@MKLIVECDREL@/$(MKLIVECDREL)/g' | \
-		$(SED) -e 's/@SPECDATE@/$(SPECDATE)/g' | \
-		$(SED) -e 's/@ARCHIVEVER@/$(ARCHIVEVER)/g' \
+		$(SED) -e 's,@MKLIVECDVER@,$(MKLIVECDVER),g' | \
+		$(SED) -e 's,@MKLIVECDREL@,$(MKLIVECDREL),g' | \
+		$(SED) -e 's,@SPECDATE@,$(SPECDATE),g' | \
+		$(SED) -e 's,@ARCHIVEVER@,$(ARCHIVEVER),g' \
 			>$(DISTDIR)/$(PKGNAME).spec
 
 clean:
