--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -17,9 +17,9 @@
 #    along with this program; if not, write to the Free Software
 #    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
-# Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org> hwdetect script
+# Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 #
-# $Id: hwdetect.in,v 1.25 2003/10/07 06:46:49 jaco Exp $
+# $Id: hwdetect.in,v 1.26 2003/10/29 12:10:10 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
